[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "layerglass"
version = "0.1.0"
description = "Automatic image-to-layered laser-cut, inlay, and engraving file generator."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "Hefan Zhang" }
]

dependencies = [
    "numpy>=1.26",
    "pillow>=10",
    "opencv-python>=4.10",
    "scikit-image>=0.24",
    "scipy>=1.13",
    "shapely>=2.1",
    "pyclipper>=1.3",
    "svgwrite>=1.4",
    "svgpathtools>=1.6",
    "ezdxf>=1.4",
    "pyyaml>=6",
    "pydantic>=2.8",
    "rich>=13",
    "typer>=0.12",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
layerglass = "layerglass.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true